# looking_for_apartment

./: README.md  manage.py  pyproject.toml  req.txt
finding_apartment/: models.py  urls.py  views.py
finding_apartment/migrations/: 0001_initial.py  0002_link_address_link_price_link_region_link_room.py  0003_alter_link_price_alter_link_room.py  0004_remove_link_city_delete_city_delete_link.py
finding_apartment/parsers/: kufar_ap.py
finding_apartment/static/finding_apartment/: looking_page.css
finding_apartment/templates/finding_apartment/: apartments_list.html  index.html  looking_page.html
looking_for_apartment/: settings.py  urls.py  wsgi.py
looking_for_apartment/finding_apartment/: apps.py  models.py  views.py
looking_for_apartment/finding_apartment/templates/finding_apartment/: index.html
looking_for_apartment/looking_for_apartment/: asgi.py  settings.py  urls.py
looking_for_apartment/looking_for_apartment/templates/site_temp/__info__/: readme.html
looking_for_apartment/templates/: base.html
looking_for_apartment/templates/finding_app/: index.html
looking_for_apartment/templates/finding_app/css/: main.css
scraping/: admin.py  models.py
scraping/management/commands/: kufar.py  kufar1.py  onliner.py
scraping/migrations/: 0001_initial.py  0002_alter_link_address_alter_link_price_and_more.py  0003_alter_link_room.py  0004_alter_link_price.py  0005_alter_link_room.py  0006_alter_link_price_alter_link_room.py
static/css/: main.css
templates/: base.html
(+46 files in other folders)
